--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,1 +1,14 @@
-site_name: My Docs
+site_name: aqualibrium
+site_author: Matthew P. Humphreys
+site_description: Equilibrium solver for aqueous solutions
+copyright: Copyright &copy; 2019 Matthew P. Humphreys (GNU GPLv3).
+repo_url: https://github.com/mvdh7/aqualibrium
+
+theme:
+    name: readthedocs
+
+nav:
+    - Overview: index.md
+    - equilib modules:
+        - .dissoc - dissociation constants: modules/dissoc.md
+        - .balance - balancing equations:   modules/balance.md
